Policies/mutate-registry/.kyverno-test/pass-deploy.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: ecr-image-deployment
  labels:
    app: good-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: good-deploy
  template:
    metadata:
      labels:
        app: good-deploy
    spec:
      containers:
      - name: ecr-container
        image: 197643.dkr.ecr.us-west-2.amazonaws.com/my-repository:tag
